// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge /> renders link Badge correctly 1`] = `
<button
  className="fhmZxy"
  href="/"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders outline Badge correctly 1`] = `
<button
  className="pgeuK"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders outline disabled Badge correctly 1`] = `
<button
  className="pgeuK"
  disabled={true}
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders standard Badge correctly 1`] = `
<button
  className="fhmZxy"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders standard disabled Badge correctly 1`] = `
<button
  className="fhmZxy"
  disabled={true}
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders transparent Badge correctly 1`] = `
<button
  className="gwECzh"
  size="regular"
>
  Badge
</button>
`;

exports[`Badge /> renders transparent disabled Badge correctly 1`] = `
<button
  className="gwECzh"
  disabled={true}
  size="regular"
>
  Badge
</button>
`;
